--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 
                 if(m_name!=undefined){ $vm.active_id=$vm.module_list[m_name].id; $vm.active_name=m_name; }
                 if($vm.active_id!='') $('#D'+$vm.active_id).css('min-height',$vm.min_height+"px");
-                if(m_name=='home') {$("#header").css("background","rgba(0,0,0,0.6)"); $('#midi_buttons').show(); $('#g_nav').hide(); }
+                if(m_name=='home') {$("#header").css("background","rgba(0,0,0,0.5)"); $('#midi_buttons').show(); $('#g_nav').hide(); }
                 else               {$("#header").css("background","rgba(0,0,0,0.8)");  $('#midi_buttons').hide(); $('#g_nav').show();}
             }
             //---------------------------------------------
@@ -281,7 +281,7 @@
                 }
             }
             body{background-size: cover; background-repeat: repeat-x; background-position: center top; background-attachment: fixed;}
-            .body_background_default{ background-image: url(https://images.unsplash.com/photo-1576009343708-82c3f5732c35?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80);}
+            .body_background_default{ background-image: url(https://images.unsplash.com/photo-1565362284742-1a290b3cd238?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80);}
         </style>
         <!----------------------------------------------->
     </body>
