--- a/modules/site/footer.html
+++ b/modules/site/footer.html
@@ -6,6 +6,7 @@
             Open source web portal <span id=year__ID></span>
         </a>
     -->
+    <span style="color:#fff">Woolcock Institute of Medical Research</span>
     </div>
     <script>
         $vm.footer_ready=1;
