--- a/modules/site/header.html
+++ b/modules/site/header.html
@@ -1,5 +1,6 @@
 <div id=D__ID>
-    <div id=layout__ID>
+    <div id=layout__ID style="border-bottom:1px solid #888">
+        <img src="https://www.woolcock.org.au/images/woolcock-institute-logo-small.png" style="margin:10px 0 10px 10px" />
         <!--
         <div id=left__ID style='margin:auto 10px'>
             <a id=desk_logo__ID href="home" style='color:#fff;text-decoration: none;'>
@@ -37,7 +38,7 @@
             </div>
         </div>
     </div>    
-    <div id=g_nav style='height:25px'> </div>
+    <!--<div id=g_nav style='height:25px'> </div>-->
     <script>
         function F__ID(){
             //------------------------------------
@@ -153,6 +154,9 @@
         }
     </script>
     <style>
+        #D__ID{
+            background-color: #FFF;
+        }
         #logo{
             float: left;
             padding: 36px 30px 10px 30px;
@@ -190,7 +194,7 @@
             z-index: 99999;
         }
         #layout__ID{
-            height:95px;
+            _height:95px;
             display: grid;
             grid-template-columns: auto 1fr auto;
             overflow:auto;
