--- a/modules/site/home.html
+++ b/modules/site/home.html
@@ -3,7 +3,7 @@
 		<div class="container-fluid" style='max-width:960px;padding-top:100px'>
                 <div>
                     <h3>New phone number lookup</h3><br><br>
-
+                    Type in the old number, e.g., 9114 0000 or 91140000, and you will see the new number.<br><br>
                     <input id=old__ID placeholder="Old phone number" /> => <input id=new__ID readonly placeholder="New phone number" />
                 </div>
 		</div>
@@ -182,7 +182,9 @@ var old_n=[
 "91140454",
 "91140344",
 "91140382",
-"91140427"
+"91140427",
+"91140000",
+"91140005"
 ]
 var new_n=[
 "9805 3085",
@@ -341,7 +343,9 @@ var new_n=[
 "9805 3264",
 "9805 3077",
 "9805 3099",
-"9805 3241"
+"9805 3241",
+"9805 3000",
+"9805 3005"
 ]
         }
 
