--- a/modules/site/home.html
+++ b/modules/site/home.html
@@ -2,8 +2,8 @@
 	<div id=page1__ID style='display:flex;align-items: center'>
 		<div class="container-fluid" style='max-width:960px;padding-top:100px'>
                 <div>
-                    <h3>New phone number lookup</h3><br><br>
-                    Type in the old number, e.g., 9114 0000 or 91140000, and you will see the new number.<br><br>
+                    <h3>To find a new telephone phone number at the Woolcock</h3><br><br>
+                    Once the old phone number is typed into the first field, the new phone number will appear in the second field. <br><br>
                     <input id=old__ID placeholder="Old phone number" /> => <input id=new__ID readonly placeholder="New phone number" />
                 </div>
 		</div>
