--- a/modules/site/home.html
+++ b/modules/site/home.html
@@ -5,6 +5,7 @@
                     <h3>To find a new telephone phone number at the Woolcock</h3><br><br>
                     Once the old phone number is typed into the first field, the new phone number will appear in the second field. <br><br>
                     <input id=old__ID placeholder="Old phone number" /> => <input id=new__ID readonly placeholder="New phone number" />
+                    <br><span style="font-size:90%" >e.g. 9114 0000 or 91140000</span>
                 </div>
 		</div>
     </div>
